--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -11992,13 +11992,13 @@ a.anchor-link {
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1">## example argument entry to conda</span>
-<span class="n">conda</span> <span class="n">install</span> <span class="o">-</span><span class="n">c</span> <span class="o">&lt;</span><span class="n">channel</span><span class="o">&gt;</span> <span class="o">&lt;</span><span class="n">package</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span>
+<span class="c1"># conda install -c &lt;channel&gt; &lt;package-name&gt;</span>
 
 <span class="c1">## install software from my channels</span>
 <span class="n">conda</span> <span class="n">install</span> <span class="o">-</span><span class="n">c</span> <span class="n">ipyrad</span> <span class="n">ipyrad</span>
 <span class="n">conda</span> <span class="n">install</span> <span class="o">-</span><span class="n">c</span> <span class="n">eaton</span><span class="o">-</span><span class="n">lab</span> <span class="n">toytree</span>
 
-<span class="c1">## a commonly used channel is bioconda</span>
+<span class="c1">## install raxml from the commonly used channel bioconda</span>
 <span class="n">conda</span> <span class="n">install</span> <span class="o">-</span><span class="n">c</span> <span class="n">bioconda</span> <span class="n">raxml</span>
 </pre></div>
 
@@ -12078,7 +12078,7 @@ a.anchor-link {
 
 </div>
 </div>
-</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -12088,19 +12088,17 @@ a.anchor-link {
 
 </div>
 </div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span></span> 
-</pre></div>
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Running-ipyrad">Running ipyrad<a class="anchor-link" href="#Running-ipyrad">&#182;</a></h3><p>Use a text-editor, such as <code>nano</code>, to enter new values into the params file.
+<img  src="../slide-images/ipyrad-cli.gif"></p>
 
 </div>
 </div>
-</div>
-
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
