--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -11869,10 +11869,10 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Course-outline:">Course outline:<a class="anchor-link" href="#Course-outline:">&#182;</a></h3><ul>
-<li>introduction to RAD-seq assembly</li>
-<li>ipyrad installation and command line (CLI)</li>
-<li>simulated data examples</li>
-<li>&lt; take a break &gt;</li>
+<li><a href="#Introduction-to-RAD-seq-assembly">introduction to RAD-seq assembly</a></li>
+<li><a href="#ipyrad-installation-and-command-line">ipyrad installation and command line (CLI)</a>  </li>
+<li><a href="#fast simulated data examples with CLI">fast simulated data examples with CLI</a></li>
+<li><a href="#In depth look at the parameters">In depth look at the parameters</a></li>
 </ul>
 <hr>
 <ul>
@@ -11947,6 +11947,7 @@ a.anchor-link {
 <li>ipyrad clusters with reverse-complement matching (e.g., pairGBS data)</li>
 <li>parallelization over multiple hosts/nodes is easy.</li>
 </ul>
+<p><img src="../slide-images/MBL-pyrad-split.png"></p>
 
 </div>
 </div>
@@ -11956,7 +11957,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="ipyrad-online-documentation">ipyrad online documentation<a class="anchor-link" href="#ipyrad-online-documentation">&#182;</a></h2><p><img src="../slide-images/MBL-1.png"></p>
+<h2 id="ipyrad-installation-and-command-line">ipyrad installation and command line<a class="anchor-link" href="#ipyrad-installation-and-command-line">&#182;</a></h2><h4 id="ipyrad-online-documentation">ipyrad online documentation<a class="anchor-link" href="#ipyrad-online-documentation">&#182;</a></h4><p><img src="../slide-images/MBL-1.png"></p>
 
 </div>
 </div>
@@ -12094,11 +12095,42 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Running-ipyrad">Running ipyrad<a class="anchor-link" href="#Running-ipyrad">&#182;</a></h3><p>Use a text-editor, such as <code>nano</code>, to enter new values into the params file.
-<img  src="../slide-images/ipyrad-cli.gif"></p>
+<h3 id="Running-ipyrad">Running ipyrad<a class="anchor-link" href="#Running-ipyrad">&#182;</a></h3><ul>
+<li>You must <em>always</em> specify a params file with <code>-p</code>. </li>
+<li>To run steps of the assembly use <code>-s</code>. </li>
+<li>To see a stats summary use <code>-r</code></li>
+<li>Use <code>-h</code> to see several other commands. </li>
+</ul>
+<p><img  src="../slide-images/ipyrad-cli.gif"></p>
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
