--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -12081,7 +12081,7 @@ a.anchor-link {
 
 </div>
 </div>
-</div>
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -12104,6 +12104,26 @@ a.anchor-link {
 <li>Use <code>-h</code> to see several other commands. </li>
 </ul>
 <p><img  src="../slide-images/ipyrad-cli.gif"></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Python,-jupyter,-and-reproducible-science">Python, jupyter, and reproducible science<a class="anchor-link" href="#Python,-jupyter,-and-reproducible-science">&#182;</a></h2><p>... notes from Pycon here...</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>An example Github repo (linked)</p>
 
 </div>
 </div>
@@ -12138,6 +12158,7 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Running-jupyter-notebooks-remotely">Running jupyter-notebooks remotely<a class="anchor-link" href="#Running-jupyter-notebooks-remotely">&#182;</a></h3><p>This can be a little tricky, but once you figure it out it is very rewarding. You can leave the notebook running on a cluster, and connect to when you want to run analyses, disconnect, and reconnect later. The link here provides a more in-depth description with a short video tutorial (with sound) (<a href="http://ipyrad.readthedocs.io/HPC_Tunnel.html">http://ipyrad.readthedocs.io/HPC_Tunnel.html</a>).</p>
+<p><span style="color:red"> This should be run on the cluster (remote) </span></p>
 
 </div>
 </div>
@@ -12165,6 +12186,7 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Look at the output of the notebook server, it will list a port number that was randomly selected (this is to avoid ya'll using the same port) and it will show an ip address (e.g., 127.0.1.1).</p>
+<p><span style="color:red"> This should be run on your laptop (local) </span></p>
 
 </div>
 </div>
@@ -12197,26 +12219,43 @@ a.anchor-link {
 </div>
 </div>
 
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img  src="../slide-images/MBL-jdash.png"></p>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="ipyparallel----interactive-parallel-computing-in-Python">ipyparallel -- interactive parallel computing in Python<a class="anchor-link" href="#ipyparallel----interactive-parallel-computing-in-Python">&#182;</a></h3><p>ipyrad makes use of the ipyparallel library for large-scale parallel computing.</p>
+
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span></span> 
-</pre></div>
+<div class=" highlight hl-ipython2"><pre><span></span><span class="c1">## start a cluster with all available cores</span>
+<span class="n">ipcluster</span> <span class="n">start</span> 
 
-</div>
-</div>
-</div>
+<span class="c1">## start a cluster with N cores</span>
+<span class="n">ipcluster</span> <span class="n">start</span> <span class="o">--</span><span class="n">n</span><span class="o">=</span><span class="mi">4</span>
 
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span></span> 
+<span class="c1">## start a cluster with a specific name and settings</span>
+<span class="n">ipcluster</span> <span class="n">start</span> <span class="o">--</span><span class="n">profile</span><span class="o">=</span><span class="s1">&#39;deren&#39;</span>
+
+<span class="c1">## start a cluster that will connect to all cores on multiple hosts</span>
+<span class="n">ipcluster</span> <span class="n">start</span> <span class="o">--</span><span class="n">n</span><span class="o">=</span><span class="mi">80</span> <span class="o">--</span><span class="n">engines</span><span class="o">=</span><span class="n">MPI</span> <span class="o">--</span><span class="n">ip</span><span class="o">=*</span> 
 </pre></div>
 
 </div>
@@ -12229,13 +12268,69 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Phylogenetic-gene/species-tree-inference">Phylogenetic gene/species tree inference<a class="anchor-link" href="#Phylogenetic-gene/species-tree-inference">&#182;</a></h2><p><img width=500 src="../slide-images/tree-inference.png"></p>
-<p><span class="align-right">
-    <a href="http://onlinelibrary.wiley.com/doi/10.1111/nyas.12747/abstract">Liu et al. 2015</a>
-</span></p>
+<p>When ipyrad connects to the ipcluster instance you can see details of the connection.</p>
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[21]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="kn">import</span> <span class="nn">ipyrad</span> <span class="kn">as</span> <span class="nn">ip</span>
+<span class="kn">import</span> <span class="nn">ipyparallel</span> <span class="kn">as</span> <span class="nn">ipp</span>
+
+<span class="n">ipyclient</span> <span class="o">=</span> <span class="n">ipp</span><span class="o">.</span><span class="n">Client</span><span class="p">()</span>
+<span class="n">ip</span><span class="o">.</span><span class="n">cluster_info</span><span class="p">(</span><span class="n">ipyclient</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Waiting for connection file: ~/.ipython/profile_default/security/ipcontroller-client.json
+</pre>
+</div>
+</div>
+
+<div class="output_area">
+<div class="prompt"></div>
+
+<div class="output_subarea output_text output_error">
+<pre>
+<span class="ansi-red-fg">---------------------------------------------------------------------------</span>
+<span class="ansi-red-fg">IOError</span>                                   Traceback (most recent call last)
+<span class="ansi-green-fg">&lt;ipython-input-21-58c3dc39597b&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-fg">()</span>
+<span class="ansi-green-intense-fg ansi-bold">      2</span> <span class="ansi-green-fg">import</span> ipyparallel <span class="ansi-green-fg">as</span> ipp
+<span class="ansi-green-intense-fg ansi-bold">      3</span> 
+<span class="ansi-green-fg">----&gt; 4</span><span class="ansi-red-fg"> </span>ipyclient <span class="ansi-blue-fg">=</span> ipp<span class="ansi-blue-fg">.</span>Client<span class="ansi-blue-fg">(</span><span class="ansi-blue-fg">)</span>
+<span class="ansi-green-intense-fg ansi-bold">      5</span> ip<span class="ansi-blue-fg">.</span>cluster_info<span class="ansi-blue-fg">(</span>ipyclient<span class="ansi-blue-fg">)</span>
+
+<span class="ansi-green-fg">/home/deren/miniconda2/lib/python2.7/site-packages/ipyparallel/client/client.pyc</span> in <span class="ansi-cyan-fg">__init__</span><span class="ansi-blue-fg">(self, url_file, profile, profile_dir, ipython_dir, context, debug, sshserver, sshkey, password, paramiko, timeout, cluster_id, **extra_args)</span>
+<span class="ansi-green-intense-fg ansi-bold">    395</span>                         no_file_msg<span class="ansi-blue-fg">,</span>
+<span class="ansi-green-intense-fg ansi-bold">    396</span>                     ])
+<span class="ansi-green-fg">--&gt; 397</span><span class="ansi-red-fg">                     </span><span class="ansi-green-fg">raise</span> IOError<span class="ansi-blue-fg">(</span>msg<span class="ansi-blue-fg">)</span>
+<span class="ansi-green-intense-fg ansi-bold">    398</span>         <span class="ansi-green-fg">if</span> url_file <span class="ansi-green-fg">is</span> None<span class="ansi-blue-fg">:</span>
+<span class="ansi-green-intense-fg ansi-bold">    399</span>             <span class="ansi-green-fg">raise</span> IOError<span class="ansi-blue-fg">(</span>no_file_msg<span class="ansi-blue-fg">)</span>
+
+<span class="ansi-red-fg">IOError</span>: Connection file &#39;~/.ipython/profile_default/security/ipcontroller-client.json&#39; not found.
+You have attempted to connect to an IPython Cluster but no Controller could be found.
+Please double-check your configuration and ensure that a cluster is running.</pre>
+</div>
+</div>
+
+</div>
+</div>
+
 </div></section></section>
 </div>
 </div>
