--- a/slides/MBL/index.html
+++ b/slides/MBL/index.html
@@ -12206,20 +12206,15 @@ a.anchor-link {
 </div>
 
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
 <div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span></span><span class="c1">## on your laptop (local) open a browser to:</span>
-<span class="n">localhost</span><span class="p">:</span><span class="mi">8888</span>
-</pre></div>
-
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="on-your-laptop-(local)-open-a-browser-to:-localhost:8888">on your laptop (local) open a browser to: localhost:8888<a class="anchor-link" href="#on-your-laptop-(local)-open-a-browser-to:-localhost:8888">&#182;</a></h4>
 </div>
 </div>
 </div>
-
-</div></section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
